# py-home

./: .coveragerc  .gitignore  CONTRIBUTING.rst  README.md  README.rst  _config.yml  index.md  projects.html  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst
page/: projects.html
src/py_home/: __init__.py  auto.ipynb  general_fun.py  home.ipynb  migrate.ipynb  projects.ipynb  read_kmz.ipynb  skeleton.py
src/py_home/gis/: Werken.kmz  project_locations.dbf  project_locations.qmd  project_locations.shp  project_locations.shx
src/py_home/html/: projects.html
tests/: conftest.py  test_skeleton.py
